# claude-nieuwsstation

./: .env.example  .gitignore  CLAUDE.md  README.md  focus.md.example  requirements.txt
claude-config/: claude_desktop_config.example.json
claude-config/commands/: briefing.md  dagkrant.md
claude-config/skills/nieuwsstation/: SKILL.md
docs/: obsidian-publish.md  telegram-setup.md
mcp-server/: README.md  pyproject.toml
mcp-server/nieuwsstation_mcp/: __init__.py  __main__.py  _paths.py  server.py
mcp-server/nieuwsstation_mcp/tools/: background.py  fetch.py  render.py
obsidian-plugin/: esbuild.config.mjs  manifest.json  nieuwsstation-snippet.css  package-lock.json  package.json  styles.css  tsconfig.json
obsidian-plugin/src/: BriefingView.ts  main.ts
scripts/: briefing-cron.sh  dagkrant.sh  fetch-dagkrant-data.sh  generate-briefing.sh
src/: api_server.py  briefing_renderer.py  briefing_writer.py  claude-session-handler.sh  claude_sessions.py  dagkrant_planner.py  dagkrant_renderer.py  fd_fetcher.py  fetch_custom_topics.py  fetch_widgets.py  guardian_fetcher.py  image_fetcher.py  news_api.py  notebooklm_uploader.py  preselect_articles.py  retroactive_digests.py  rss_fetcher.py  translator.py  vault_search.py
src/config/: sources.yaml
src/templates/: briefing_template.md  dagkrant_template.html  podcast_template.md
