[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nieuwsstation-mcp"
version = "0.1.0"
description = "MCP-server voor Nieuwsstation: maakt de dagkrant beschikbaar in Claude Desktop"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Marcel van Marrewijk"}]
dependencies = [
    "mcp>=1.0.0",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
background = ["anthropic>=0.40"]

[project.scripts]
nieuwsstation-mcp = "nieuwsstation_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["nieuwsstation_mcp"]
